# geometry

./: .gitignore  README.md  meta.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  workflow.yml
.github/workflows/: publish_pypi.yml
examples/: transformpoint.py
geometry/: __init__.py  base.py  circle.py  coordinate_frame.py  factory.py  gps.py  gps_positions.py  line.py  point.py  points.py  points.pyi  quad.py  quaternion.py  quaternions.py  rotation_matrix.py  time.py  transformation.py
geometry/point/: __init__.py  instance_methods.py
src/geometry/: __init__.py  air.py  angles.py  base.py  coordinate_frame.py  point.py  quaternion.py  time.py  transformation.py  utils.py
tests/: test_base.py  test_coord.py  test_factory.py  test_gps.py  test_line.py  test_point.py  test_points.py  test_quaternion.py  test_quaternions.py  test_time.py  test_transform.py  test_utils.py
