[project]
name = "pfc-geometry"
description = "A library for working with 3D geometry."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.1.3", "pandas>=2.2.3"]
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/geometry"]

[dependency-groups]
dev = ["numpy-quaternion>=2023.0.3", "pytest>=8.3.3"]
