[metadata]
name=pfc_geometry
author=Thomas David
author_email=thomasdavid0@gmail.com
description-file = README.md
version=0.1.1
url=https://github.com/PyFlightCoach/geometry
download_url=https://github.com/PyFlightCoach/geometry/archive/refs/tags/v0.1.0.tar.gz

[options]
install_requires = 
    numpy
    pandas
